--- a/eucaconsole/static/sass/pages/dashboard.scss
+++ b/eucaconsole/static/sass/pages/dashboard.scss
@@ -6,6 +6,10 @@ $dashboard-panel-padding: 4px;
 $dashboard-panel-icon-size: 100px;
 
 
+#logobar .product-name {
+    padding-left: 0;
+}
+
 #maincontent {
     padding-top: 1rem;
     #pagetitle {
