--- a/eucaconsole/static/sass/pages/login.scss
+++ b/eucaconsole/static/sass/pages/login.scss
@@ -3,6 +3,10 @@
 
 $oidc-blue: #3560A0;
 
+#logobar .product-name {
+    padding-left: 0;
+}
+
 #notifications-wrapper {
     padding-top: 2rem;
 }
