--- a/eucaconsole/static/sass/pages/managecredentials.scss
+++ b/eucaconsole/static/sass/pages/managecredentials.scss
@@ -71,8 +71,8 @@ form[name="eucaChangePassword"] {
 
     &.password-medium {
         span.strength {
-            color: $dxc-yellow;
-            border-top: 4px solid $dxc-yellow;
+            color: orange;
+            border-top: 4px solid orange;
             &:after {
                 content: "medium";
             }
